Fixing the viber alert on IOS v3

--- a/UKR/Main-Page/css/stylesheet.css
+++ b/UKR/Main-Page/css/stylesheet.css
@@ -811,6 +811,7 @@ rgba(0,0,0,0.5)
 
 #adaptive-viber {
     display: inline;
+    cursor: pointer;
 }
 
 /****************** Header Menu *********************/
